# yh-project

./: .gitignore  AGENTS.md  docker-compose.example.yml  docker-compose.yml  pull.sh
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  start_backend.sh
backend/app/: db.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/models/: entities.py  schemas.py
backend/app/services/: auth.py  exports.py  llm.py  llm_agent.py  logic.py  minio_service.py  mock_store.py  pricing.py
backend/utils/: clean_fixed_retail_price.py  db_backup_restore.py  download_effect_videos.py  export_effect_urls.py  export_problem_products.py  import_csv_to_products.py  import_effect_videos_to_product.py  llm_probe.py  merge_effect_urls.py  minio_url.py  normalize_spec.py  schema_migrate.py  test_db.py
backend/yh_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: data-caching-plan.md  db-tables.md  plan.md
yh-project-uniapp/: App.vue  env.example  manifest.json  pages.json
yh-project-uniapp/common/: api.js  auth.js  config.js  config.js.example  mock-data.js  pricing.js
yh-project-uniapp/pages/auth/: login.vue
yh-project-uniapp/pages/categories/: manage.vue  quick-add.vue  quick-assign.vue
yh-project-uniapp/pages/costs/: misc.vue
yh-project-uniapp/pages/dashboard/: index.vue
yh-project-uniapp/pages/index/: index.vue
yh-project-uniapp/pages/inventory/: detail.vue  overview.vue
yh-project-uniapp/pages/orders/: import.vue
yh-project-uniapp/pages/pricing/: overview.vue
yh-project-uniapp/pages/products/: create.vue  detail.vue  list.vue
(+5 files in other folders)
